.devspaces/local-registry/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-registry
  labels:
    app: local-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-registry
  template:
    metadata:
      labels:
        app: local-registry
    spec:
      containers:
        - name: registry
          image: quay.io/libpod/registry:2.8.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: registry-storage
              mountPath: /var/lib/registry
          readinessProbe:
            httpGet:
              path: /v2/
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v2/
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: registry-storage
          persistentVolumeClaim:
            claimName: local-registry-pvc
