.devspaces/local-registry/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-registry
  labels:
    app: local-registry
spec:
  type: ClusterIP
  selector:
    app: local-registry
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
      protocol: TCP
